# AI-Cardiac-Risk-Prediction

./: .gitignore  CLAUDE.md  KAGGLE_GUIDE2.md  PAPER1_ENHANCEMENT_CHECKLIST.md  PAPER1_PAPER2_COMPLETE_GUIDE.md  PROJECT_STATUS_AND_ROADMAP.md  PhD_Portfolio_Review_and_Capstone_Proposal.docx  REMOVE_PAPER3_GUIDE.md  SPEED_FIX_README.md  history.jsonl  pyproject.toml  requirements.txt
New folder/: README.md  day-01.md  day-02.md  day-03.md  day-04.md  day-05.md  day-06.md  day-07.md  day-08.md  day-09.md  day-10.md  day-11.md  day-12.md  day-13.md  day-14.md  day-15.md
configs/: cardiocausal_smoke.json  causalechonet_cvae.json  causalechonet_cvae_smoke.json  echofusenet_default.json  echofusenet_ds1ds2_baseline.json  echofusenet_focal.json  echofusenet_gpu_headline.json  echofusenet_smoke.json
docs/: COLAB_GUIDE.md  KAGGLE_GUIDE.md  PAPER2_PAPER3_SCAFFOLD.md  PAPER2_SCAFFOLD.md  RESULTS_SUMMARY.md  aami_mapping.md  ds1_ds2_split.md  explainability_note.md
paper1_echofusenet/: __init__.py  benchmark.py
paper1_echofusenet/baselines/: __init__.py  compare.py  models.py
paper1_echofusenet/data/: __init__.py  aami.py  beats.py  dataset.py  download.py  incart.py  mitbih.py  ptbxl.py  sampler.py  splits.py  transform_cache.py
paper1_echofusenet/deployment/: __init__.py  onnx_export.py
paper1_echofusenet/evaluation/: __init__.py  significance.py
paper1_echofusenet/models/: __init__.py  branch.py  echofusenet.py
paper1_echofusenet/robustness/: __init__.py  noise.py
paper1_echofusenet/training/: __init__.py  ablation.py  compare_imbalance.py  config.py  crossval.py  evaluate.py  losses.py  (+3 more)
paper2_causalechonet/: __init__.py  data.py
paper3_cardiocausal/: __init__.py
scripts/: benchmark.py  branch_summary.py  check_dataloader.py  check_distinctness.py  domain_transfer.py  evaluate_ci.py  external_validation.py  model_summary.py  visualize_gaf.py  visualize_mtf.py  visualize_rp.py
shared/: __init__.py
tests/: test_aami.py  test_ablation.py  test_baselines.py  test_beats.py  test_benchmark.py  test_branch.py  test_crossval.py  test_dataset.py  test_deployment.py  test_distinctness.py  test_echofusenet.py  test_evaluate.py  test_experiment_log.py  test_gaf.py  test_incart.py  test_leakage.py  test_losses.py  test_metrics.py  test_metrics_imbalance.py  test_mitbih_load.py  test_mtf.py  test_optuna_search.py  test_paper2_attribution.py  test_paper2_baselines.py  test_paper2_config.py  test_paper2_cvae.py  test_paper2_data.py  test_paper2_encoder.py  test_paper2_metrics.py  test_paper3_causal.py  test_paper3_config.py  test_paper3_ipw.py  test_paper3_metrics.py  test_paper3_mimic_link.py  test_paper3_models.py  test_paper3_recourse_gen.py  test_paper3_scm.py  test_ptbxl.py  test_resume.py  test_robustness.py  (+10 more)
(+44 files in other folders)
