[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "echofusenet"
version = "0.1.0"
description = "EchoFuseNet (Paper 1) — multimodal ECG arrhythmia classification via RP/GAF/MTF fusion"
requires-python = ">=3.11"
readme = "New folder/README.md"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "wfdb>=4.1",
    "pyts>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "matplotlib>=3.7"]
# §3 hyperparameter optimisation — optional so core training stays lightweight.
tuning = ["optuna>=3.4"]
# §6 standard-CNN baselines for the comparison table — optional.
baselines = ["torchvision>=0.17"]
# §8 ONNX export + int8 quantization for the deployment section — optional.
# onnxscript backs torch>=2.5's default ONNX exporter.
deployment = ["onnx>=1.16", "onnxruntime>=1.17", "onnxscript>=0.1"]

[tool.setuptools.packages.find]
include = ["paper1_echofusenet*", "paper2_causalechonet*", "shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
